[gd_scene load_steps=20 format=2]

[ext_resource path="res://Gargoyle.gd" type="Script" id=1]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle.png" type="Texture" id=2]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_fly_001.png" type="Texture" id=3]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_fly_002.png" type="Texture" id=4]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_fly_003.png" type="Texture" id=5]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_fly_004.png" type="Texture" id=6]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_die_007.png" type="Texture" id=7]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_die_006.png" type="Texture" id=8]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_die_005.png" type="Texture" id=9]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_die_003.png" type="Texture" id=10]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_die_004.png" type="Texture" id=11]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_die_002.png" type="Texture" id=12]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_die_001.png" type="Texture" id=13]
[ext_resource path="res://Characters/Gargoyle/PNG/gargoyle_die_008.png" type="Texture" id=14]
[ext_resource path="res://Font/Russo_One.ttf" type="DynamicFontData" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.6417
height = 2.81165

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.7748
height = 3.43939

[sub_resource type="DynamicFont" id=6]
size = 8
outline_size = 1
font_data = ExtResource( 15 )

[node name="Gargoyle" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="GargoyleSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Stop"
playing = true

[node name="GargoyleTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.20831, 1.10416 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="GargoyleArea2D" type="Area2D" parent="."]

[node name="GargoyleCollision" type="CollisionShape2D" parent="GargoyleArea2D"]
position = Vector2( 2.27833, 0.142395 )
rotation = 1.59792
shape = SubResource( 3 )

[node name="DieTimer" type="Timer" parent="."]
wait_time = 1.8

[node name="LifeLabel" type="Label" parent="."]
margin_left = -15.5211
margin_top = -31.6118
margin_right = 24.4789
margin_bottom = -17.6118
custom_fonts/font = SubResource( 6 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Lives:  5"
align = 1
valign = 1

[connection signal="timeout" from="GargoyleTimer" to="." method="_on_GargoyleTimer_timeout"]
[connection signal="area_entered" from="GargoyleArea2D" to="." method="_on_GargoyleArea2D_area_entered"]
[connection signal="body_entered" from="GargoyleArea2D" to="." method="_on_GargoyleArea2D_body_entered"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
